tests/base/parser/bad/stmts_t-id-bind-exists-with.scilla
scilla_version 0

contract Test
()

(* Needs lower case identifier *)
transition something ()
  b <- exists Map
end
